Adjusted the height of file picker controls to avoid hidden overflow.

--- a/FribergFastigheter.Client/wwwroot/css/app.css
+++ b/FribergFastigheter.Client/wwwroot/css/app.css
@@ -164,6 +164,10 @@ input, select {
     height: 1.75rem;
 }
 
+input[type="file"] {
+    height: 1.9rem;
+}
+
 label {
     font-weight: bold;
 }
